updated icons, fixed some alignment issues

--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
     /* padding needed to not clash with fixed navbar */
     padding-top: 70px;
     font-family: Inter, Sans-Serif;
-    color: #1f2f50;
+    color: #3A4A61;
 }
 
 * {
@@ -26,21 +26,8 @@ a {
     padding-right: 80px;
 }
 
-h1 {
+h1, h2, h3, h4 {
     font-weight: bold;
-}
-
-h2 {
-    font-weight: bold;
-}
-
-h3 {
-    font-weight: bold;
-}
-
-h4 {
-    font-weight: bold;
-    font-size: 20px;
 }
 
 h5 {
@@ -100,7 +87,6 @@ button:hover {
 
 .top-bar {
     background-color: #fff;
-    /* color: #23293D; */
     color: #23293d;
     padding: 10px 20px 10px 20px;
     border-top: 1px solid #ECECEC;
@@ -114,13 +100,13 @@ button:hover {
 
 .hero-row {
     background-image: url("https://res.cloudinary.com/dtt3pdk9l/image/upload/v1590953828/Ideal_construction/bg_extension_k4qbtg.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     height: 100vh;
     color: #fff;
     line-height: 30px;
     z-index: 1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .hero-content {
@@ -131,7 +117,14 @@ button:hover {
 /* Services */
 
 .services-card {
-    padding: 20px 20px 20px 20px;
+    padding: 20px
+}
+
+.services-card > h4 {
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top:15px;
+    margin-bottom:5px;
 }
 
 .services-row {
@@ -140,7 +133,7 @@ button:hover {
 }
 
 .icon {
-    width: 70px;
+    width: 50px;
 }
 
 
@@ -381,6 +374,18 @@ textarea {
 
 .contact-form {
     border: 1px solid #ededed;
+}
+
+.contact-details, .contact-form {
+    padding-top:30px;
+    padding-bottom:30px;
+}
+
+@media (min-width:1500px){
+    .contact-form {
+        padding-left:50px;
+        padding-right:50px;
+    }
 }
 
 
